KJS // 스프링 라이브러리 추가

--- a/danbplus/src/main/resources/application.properties
+++ b/danbplus/src/main/resources/application.properties
@@ -1,5 +1,31 @@
-
+#################### JSP ####################
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+# JSP 수정시 서버 재식작 없이 바로 적용될 수 있게 설정
+server.servlet.jsp.init-parameters.development=true
+
+################### MySQL ###################
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/danbplus?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.username=danbplus
+spring.datasource.password=Danb1235!!
+
+################## MyBatis ##################
+mybatis.config=mybatis-config.xml
+# mapper.xml에서 resultType 지정시 com.danbplus.vo.TestVo -> TestVo로 사용가능 
+mybatis.type-aliases-package=com.danbplus.vo 
+
+# mapper.xml 위치 지정 
+mybatis.mapper-location=mybatis/**/*.xml
+
+#################### JPA ####################
+# true 설정시 JPA 쿼리문 확인가능
+spring.jpa.show-sql=true
+
+# DDL (Crate, ALter, Drop) 정의시, DB의 고유 기능 사용
+spring.jpa.hibernate.ddl-auto=update 
+
+# JPA(Hibernate) 동작시 발생한 SQL 가독성 기능사용
+spring.jpa.properties.hibernate.format_sql=true
 
