--- a/danbplus/build.gradle
+++ b/danbplus/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java'
 }
 
-group = 'com.site'
+group = 'com.danbplus'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -23,30 +23,31 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	//implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
-	implementation 'javax.servlet:jstl:1.2'
+
+	// JSP 라이브러리 추가
+	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+	implementation 'javax.servlet:jstl:1.2'
 	
-	//tiles 관련 라이브러리
+	// tiles 라이브러리 추가
 	implementation 'org.apache.tiles:tiles-jsp:3.0.5'
 	implementation 'org.apache.tiles:tiles-servlet:3.0.5'
 	implementation 'org.apache.tiles:tiles-core:3.0.5'
 	implementation 'org.apache.tiles:tiles-api:3.0.5'
 	implementation 'org.apache.tiles:tiles-el:3.0.5'
-		
 	
-	//mybatis
-	//implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
-	//runtimeOnly 'mysql:mysql-connector-java:8.0.25'
-
+	// Mybatis 라이브러리 추가
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
+	implementation 'mysql:mysql-connector-java'
+	
 }
-	
+
 tasks.named('test') {
 	useJUnitPlatform()
 }
