KJS // Mybatis 연동

--- a/danbplus/src/main/resources/application.properties
+++ b/danbplus/src/main/resources/application.properties
@@ -12,12 +12,11 @@ spring.datasource.username=danbplus
 spring.datasource.password=Danb1235!!
 
 ################## MyBatis ##################
-mybatis.config=mybatis-config.xml
 # mapper.xml에서 resultType 지정시 com.danbplus.vo.TestVo -> TestVo로 사용가능 
-mybatis.type-aliases-package=com.danbplus.vo 
+mybatis.type-aliases-package=com.danbplus.vo
 
 # mapper.xml 위치 지정 
-mybatis.mapper-location=mybatis/**/*.xml
+mybatis.mapper-locations=classpath:mapper/**/*.xml
 
 #################### JPA ####################
 # true 설정시 JPA 쿼리문 확인가능
