--- a/danbplus/src/main/resources/application.properties
+++ b/danbplus/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.password=Danb1235!!
 
 ################## MyBatis ##################
 # mapper.xml에서 resultType 지정시 com.danbplus.vo.TestVo -> TestVo로 사용가능 
-mybatis.type-aliases-package=com.danbplus.vo
+mybatis.type-aliases-package=com.danbplus.config.vo
 
 # mapper.xml 위치 지정 
 mybatis.mapper-locations=classpath:mapper/**/*.xml
